T1ch2 little fix 2